--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "text2lesson-library",
   "version": "1.0.0",
-  "description": "Prebuilt library for use by [Text2Lesson](https://github.com/henspace/text2lesson).",
+  "description": "Prebuilt library for use by [RapidQandA](https://github.com/henspace/text2lesson).",
   "main": "index.js",
   "directories": {
     "doc": "docs"
